--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <style type="text/css">
 .bgimg {
-    background-image: url("greenchalkboard.JPG");
+    background-image: url("greenchalkboard.jpg");
     	height:500px;
 	width:900px ;
 }
